// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Two step render result should be same with marksy codespans 1`] = `
<div>
  <p>
    install with 
    <code>
      $ npm install
    </code>
  </p>
</div>
`;

exports[`Two step render result should be same with marksy components using H and marksy language 1`] = `
<div>
  <div>
    mip
  </div>
</div>
`;

exports[`Two step render result should be same with marksy headers 1`] = `
<div>
  <h1
    id="header1"
  >
    header1
  </h1>
  <h2
    id="header1-header2"
  >
    header2
  </h2>
  <h3
    id="header1-header2-header3"
  >
    header3
  </h3>
  <h4
    id="header1-header2-header3-header4"
  >
    header4
  </h4>
</div>
`;

exports[`Two step render result should be same with marksy html 1`] = `
<div>
  <div>
    <div>
      hello
    </div>
  </div>
</div>
`;

exports[`Two step render result should be same with marksy image 1`] = `
<div>
  <p>
    <img
      alt="test"
      src="http://some.com/image.png"
    />
  </p>
</div>
`;

exports[`Two step render result should be same with marksy italic text 1`] = `
<div>
  <p>
    hello 
    <em>
      there
    </em>
  </p>
</div>
`;

exports[`Two step render result should be same with marksy links 1`] = `
<div>
  <p>
    <a
      href="http://example.com"
    >
      my link
    </a>
  </p>
</div>
`;

exports[`Two step render result should be same with marksy list 1`] = `
<div>
  <ul>
    <li>
      foo
    </li>
    <li>
      bar
    </li>
  </ul>
</div>
`;

exports[`Two step render result should be same with marksy multiple html 1`] = `
<div>
  <div>
    <div>
      hello
    </div>
    

    <strong>
      there
    </strong>
    

    <em>
      world
    </em>
  </div>
</div>
`;

exports[`Two step render result should be same with marksy nested lists 1`] = `
<div>
  <ul>
    <li>
      Colors
      <ul>
        <li>
          Red
        </li>
        <li>
          Blue
        </li>
      </ul>
    </li>
    <li>
      Shape
      <ul>
        <li>
          Triangle
        </li>
        <li>
          Rectangle
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Two step render result should be same with marksy ordered list 1`] = `
<div>
  <ol>
    <li>
      foo
    </li>
    <li>
      bar
    </li>
  </ol>
</div>
`;

exports[`Two step render result should be same with marksy real article db: How to Remove Odors From Car Interiors 1`] = `
<div>
  <p>
    You don’t have to just live with the odor when there is an unidentified stink in your car. It will take a little effort, but it is well worth it to be able to get in your car without thinking, “ew, why does it smell like that in here?” All you have to do is find the source, clean it up, then give your car a good cleaning – which it probably needs anyway.
  </p>
  <h3
    id="remove-the-cause-of-the-odor"
  >
    Remove the cause of the odor
  </h3>
  <p>
    <strong>
      Materials Needed
    </strong>
  </p>
  <ul>
    <li>
      Paper towels
    </li>
    <li>
      Plastic utensil or putty knife
    </li>
  </ul>
  <p>
    <strong>
      Step 1: Determine where the odor is coming from
    </strong>
    . It could be leftover residue from an old milk or juice spill, a half-eaten piece of fruit, or a sippy cup with a little curdled milk left in the bottom.
  </p>
  <p>
    <strong>
      Step 2: Remove the cause of the odor
    </strong>
    . Pick it up with paper towels or scrape it off with a plastic utensil or putty knife.
  </p>
  <h3
    id="remove-the-cause-of-the-odor-clean-the-odor-causing-spill"
  >
    Clean the odor-causing spill
  </h3>
  <p>
    <strong>
      Materials Needed
    </strong>
  </p>
  <ul>
    <li>
      Baking soda
    </li>
    <li>
      Bucket
    </li>
    <li>
      Dish soap
    </li>
    <li>
      Distilled vinegar
    </li>
    <li>
      Hot water
    </li>
    <li>
      Towels
    </li>
    <li>
      Vacuum
    </li>
    <li>
      Washcloth or clean sponge
    </li>
  </ul>
  <p>
    <strong>
      Step 1: Combine 1 cup of vinegar, 1 teaspoon of dish soap, and 1 gallon of hot water in a bucket
    </strong>
    .
  </p>
  <p>
    **Step 2: Put on some rubber dishwashing gloves and apply the solution to the source of the odor **.
  </p>
  <p>
    <strong>
      Step 3: Rub the solution into the spot with a scrub brush or sponge
    </strong>
    . Let it work for about half an hour.
  </p>
  <p>
    <strong>
      Step 4: Soak up the dirty vinegar solution with a towel
    </strong>
    .
  </p>
  <p>
    <strong>
      Step 5: Pour baking soda on the stinky spot
    </strong>
    . Apply it as heavily as possible. A 1/4-inch thickness or more is best. Leave it there for as long as possible. Overnight is good but several days is better.
  </p>
  <p>
    <strong>
      Step 6: Vacuum up the baking soda
    </strong>
    . Use a high-powered wet/dry vacuum if possible. If you only have a regular household vacuum, empty the canister or replace the bag before you use it.
  </p>
  <p>
    <strong>
      Step 7: Repeat steps 5 and 6, if the odor lingers
    </strong>
    .
  </p>
  <p>
    **Step 8: Put the windows down and leave the car outdoors, if you can, to let it air out **.
  </p>
  <h3
    id="remove-the-cause-of-the-odor-clean-the-odor-causing-spill-clean-the-entire-interior-of-your-car"
  >
    Clean the entire interior of your car
  </h3>
  <p>
    Now it’s time to give your car’s interior a 
    <a
      href="https://getjerry.com/advice/how-to-do-a-thorough-car-interior-cleaning-by-amber-dowler"
    >
      thorough cleaning
    </a>
    . At this point, you can also tackle 
    <a
      href="https://getjerry.com/advice/how-to-remove-grease-and-oil-from-a-car-interior-by-mary-kurz"
    >
      grease and oil stains
    </a>
    , 
    <a
      href="https://getjerry.com/advice/how-to-clean-the-inside-of-a-car-windshield-by-cheryl-knight"
    >
      windows
    </a>
    , and, once you’re done, consider installing 
    <a
      href="https://getjerry.com/advice/how-to-buy-install-and-clean-car-seat-covers-by-rochelle-miller-hernandez"
    >
      car seat covers
    </a>
    .
  </p>
  <p>
    <strong>
      Materials Needed
    </strong>
  </p>
  <ul>
    <li>
      Automotive carpet and upholstery cleaner (Available in auto parts stores and online.)
    </li>
    <li>
      Towels
    </li>
    <li>
      Washcloth or clean sponge
    </li>
    <li>
      Vacuum
    </li>
  </ul>
  <p>
    <strong>
      Step 1: Take everything out of the car
    </strong>
    . Remove the floor mats, too.
  </p>
  <p>
    <strong>
      Step 2: Vacuum the entire car, top to bottom
    </strong>
    .
  </p>
  <p>
    <strong>
      Step 3: Clean the carpet, upholstery, and headliner/roof upholstery with automotive carpet and upholstery cleaner
    </strong>
    . Follow the manufacturer’s instructions. 
  </p>
  <p>
    For best results, get an all-purpose cleaning/odor-eliminating solution like 
    <a
      href="https://www.amazon.com/dp/B072HKH61F?psc=1"
    >
      Turtle Wax’s Clean and Fresh Kit
    </a>
    . It even comes with a special microfiber towel to use.
  </p>
  <p>
    <strong>
      Step 4: Let the car sit outdoors with the windows open for as long as you can to really air it out
    </strong>
    . Do not leave the doors open, though. The dome light might run down the battery.
  </p>
  <h3
    id="remove-the-cause-of-the-odor-clean-the-odor-causing-spill-mask-the-odor-until-it-eventually-dissipates-naturally-–-sometimes-it-just-takes-time"
  >
    Mask the odor until it eventually dissipates naturally – sometimes it just takes time
  </h3>
  <p>
    <strong>
      Materials Needed
    </strong>
  </p>
  <ul>
    <li>
      Essential oil diffuser
    </li>
    <li>
      Odor-absorbing substance
    </li>
    <li>
      Upholstery odor remover
    </li>
  </ul>
  <p>
    <strong>
      Step 1: Spray the upholstery, headliner, and carpet with a spray odor neutralizer
    </strong>
    .
  </p>
  <p>
    <strong>
      Step 2: Use an essential oil diffuser in your car
    </strong>
    . You can choose your favorite essential oil fragrance or use a different essential oil each day. 
    <a
      href="https://www.amazon.com/s/ref=nb_sb_ss_i_1_30?url=search-alias%3Dautomotive&field-keywords=essential+oil+diffuser+for+car&sprefix=essential+oil+diffuser+for+car%2Cautomotive%2C208&crid=P9R2ST8MI037"
    >
      Amazon
    </a>
     has a nice selection of diffusers to choose from and sells essential oils.
  </p>
  <p>
    <strong>
      Step 3: Place an odor-absorbing substance near the source of the odor
    </strong>
    . You can pick them up at the local discount store or order them online. 
    <a
      href="http://mosonatural.com/"
    >
      MosoNatural
    </a>
     sells a very effective product online.
  </p>
  <p>
    We all know how distracting the stink from a little spilled milk can be, so no doubt you’ll be glad you have it removed before it gets any worse. A nice-smelling car makes any trip, long or short, that much more pleasant. 
  </p>
</div>
`;

exports[`Two step render result should be same with marksy real article: How to Remove Odors From Car Interiors 1`] = `
<div>
  <p>
    You don’t have to just live with the odor when there is an unidentified stink in your car. It will take a little effort, but it is well worth it to be able to get in your car without thinking, “ew, why does it smell like that in here?” All you have to do is find the source, clean it up, then give your car a good cleaning – which it probably needs anyway.
  </p>
  <h3
    id="remove-the-cause-of-the-odor"
  >
    Remove the cause of the odor
  </h3>
  <p>
    <strong>
      Materials Needed
    </strong>
  </p>
  <ul>
    <li>
      Paper towels
    </li>
    <li>
      Plastic utensil or putty knife
    </li>
  </ul>
  <p>
    <strong>
      Step 1: Determine where the odor is coming from
    </strong>
    . It could be leftover residue from an old milk or juice spill, a half-eaten piece of fruit, or a sippy cup with a little curdled milk left in the bottom.
  </p>
  <p>
    <strong>
      Step 2: Remove the cause of the odor
    </strong>
    . Pick it up with paper towels or scrape it off with a plastic utensil or putty knife.
  </p>
  <h3
    id="remove-the-cause-of-the-odor-clean-the-odor-causing-spill"
  >
    Clean the odor-causing spill
  </h3>
  <p>
    <strong>
      Materials Needed
    </strong>
  </p>
  <ul>
    <li>
      Baking soda
    </li>
    <li>
      Bucket
    </li>
    <li>
      Dish soap
    </li>
    <li>
      Distilled vinegar
    </li>
    <li>
      Hot water
    </li>
    <li>
      Towels
    </li>
    <li>
      Vacuum
    </li>
    <li>
      Washcloth or clean sponge
    </li>
  </ul>
  <p>
    <strong>
      Step 1: Combine 1 cup of vinegar, 1 teaspoon of dish soap, and 1 gallon of hot water in a bucket
    </strong>
    .
  </p>
  <p>
    **Step 2: Put on some rubber dishwashing gloves and apply the solution to the source of the odor **.
  </p>
  <p>
    <strong>
      Step 3: Rub the solution into the spot with a scrub brush or sponge
    </strong>
    . Let it work for about half an hour.
  </p>
  <p>
    <strong>
      Step 4: Soak up the dirty vinegar solution with a towel
    </strong>
    .
  </p>
  <p>
    <strong>
      Step 5: Pour baking soda on the stinky spot
    </strong>
    . Apply it as heavily as possible. A 1/4-inch thickness or more is best. Leave it there for as long as possible. Overnight is good but several days is better.
  </p>
  <p>
    <strong>
      Step 6: Vacuum up the baking soda
    </strong>
    . Use a high-powered wet/dry vacuum if possible. If you only have a regular household vacuum, empty the canister or replace the bag before you use it.
  </p>
  <p>
    <strong>
      Step 7: Repeat steps 5 and 6, if the odor lingers
    </strong>
    .
  </p>
  <p>
    **Step 8: Put the windows down and leave the car outdoors, if you can, to let it air out **.
  </p>
  <h3
    id="remove-the-cause-of-the-odor-clean-the-odor-causing-spill-clean-the-entire-interior-of-your-car"
  >
    Clean the entire interior of your car
  </h3>
  <p>
    Now it’s time to give your car’s interior a 
    <a
      href="https://getjerry.com/advice/how-to-do-a-thorough-car-interior-cleaning-by-amber-dowler"
    >
      thorough cleaning
    </a>
    . At this point, you can also tackle 
    <a
      href="https://getjerry.com/advice/how-to-remove-grease-and-oil-from-a-car-interior-by-mary-kurz"
    >
      grease and oil stains
    </a>
    , 
    <a
      href="https://getjerry.com/advice/how-to-clean-the-inside-of-a-car-windshield-by-cheryl-knight"
    >
      windows
    </a>
    , and, once you’re done, consider installing 
    <a
      href="https://getjerry.com/advice/how-to-buy-install-and-clean-car-seat-covers-by-rochelle-miller-hernandez"
    >
      car seat covers
    </a>
    .
  </p>
  <p>
    <strong>
      Materials Needed
    </strong>
  </p>
  <ul>
    <li>
      Automotive carpet and upholstery cleaner (Available in auto parts stores and online.)
    </li>
    <li>
      Towels
    </li>
    <li>
      Washcloth or clean sponge
    </li>
    <li>
      Vacuum
    </li>
  </ul>
  <p>
    <strong>
      Step 1: Take everything out of the car
    </strong>
    . Remove the floor mats, too.
  </p>
  <p>
    <strong>
      Step 2: Vacuum the entire car, top to bottom
    </strong>
    .
  </p>
  <p>
    <strong>
      Step 3: Clean the carpet, upholstery, and headliner/roof upholstery with automotive carpet and upholstery cleaner
    </strong>
    . Follow the manufacturer’s instructions. 
  </p>
  <p>
    For best results, get an all-purpose cleaning/odor-eliminating solution like 
    <a
      href="https://www.amazon.com/dp/B072HKH61F?psc=1"
    >
      Turtle Wax’s Clean and Fresh Kit
    </a>
    . It even comes with a special microfiber towel to use.
  </p>
  <p>
    <strong>
      Step 4: Let the car sit outdoors with the windows open for as long as you can to really air it out
    </strong>
    . Do not leave the doors open, though. The dome light might run down the battery.
  </p>
  <h3
    id="remove-the-cause-of-the-odor-clean-the-odor-causing-spill-mask-the-odor-until-it-eventually-dissipates-naturally-–-sometimes-it-just-takes-time"
  >
    Mask the odor until it eventually dissipates naturally – sometimes it just takes time
  </h3>
  <p>
    <strong>
      Materials Needed
    </strong>
  </p>
  <ul>
    <li>
      Essential oil diffuser
    </li>
    <li>
      Odor-absorbing substance
    </li>
    <li>
      Upholstery odor remover
    </li>
  </ul>
  <p>
    <strong>
      Step 1: Spray the upholstery, headliner, and carpet with a spray odor neutralizer
    </strong>
    .
  </p>
  <p>
    <strong>
      Step 2: Use an essential oil diffuser in your car
    </strong>
    . You can choose your favorite essential oil fragrance or use a different essential oil each day. 
    <a
      href="https://www.amazon.com/s/ref=nb_sb_ss_i_1_30?url=search-alias%3Dautomotive&field-keywords=essential+oil+diffuser+for+car&sprefix=essential+oil+diffuser+for+car%2Cautomotive%2C208&crid=P9R2ST8MI037"
    >
      Amazon
    </a>
     has a nice selection of diffusers to choose from and sells essential oils.
  </p>
  <p>
    <strong>
      Step 3: Place an odor-absorbing substance near the source of the odor
    </strong>
    . You can pick them up at the local discount store or order them online. 
    <a
      href="http://mosonatural.com/"
    >
      MosoNatural
    </a>
     sells a very effective product online.
  </p>
  <p>
    We all know how distracting the stink from a little spilled milk can be, so no doubt you’ll be glad you have it removed before it gets any worse. A nice-smelling car makes any trip, long or short, that much more pleasant. 
  </p>
</div>
`;

exports[`Two step render result should be same with marksy self-closing tag 1`] = `
<div>
  <p>
      
    <img
      alt="test"
      src="http://some.com/image.png"
    />
  </p>
  <div>
      
    <div>
      <br />
    </div>
    


  </div>
  <div>
      
    <hr />
    


  </div>
  <div>
      
    <input
      type="text"
    />
    

  </div>
</div>
`;

exports[`Two step render result should be same with marksy should allow injecting context to elements 1`] = `
<div>
  <div>
    bar
  </div>
</div>
`;

exports[`Two step render result should be same with marksy should allow overriding block code element 1`] = `
<div>
  <div>
    js
    :
    code
  </div>
</div>
`;

exports[`Two step render result should be same with marksy should allow overriding inline code element 1`] = `
<div>
  <p>
    Hello 
    <span>
      code
    </span>
  </p>
</div>
`;

exports[`Two step render result should be same with marksy should be able to combine in compilation 1`] = `
<div>
  <h1
    id="hey"
  >
    hey
  </h1>
  <ul>
    <li>
      foo
    </li>
  </ul>
  <p>
    -bar
  </p>
</div>
`;

exports[`Two step render result should be same with marksy should escape code when no highlighting is supplied 1`] = `
<div>
  <pre>
    <code
      class="language-js"
    >
      const Foo = () =&gt; &lt;div/&gt;
    </code>
  </pre>
</div>
`;

exports[`Two step render result should be same with marksy should handle same name nested headers 1`] = `
<div>
  <h1
    id="header1"
  >
    header1
  </h1>
  <h2
    id="header1-header2"
  >
    header2
  </h2>
  <h1
    id="header3"
  >
    header3
  </h1>
  <h2
    id="header3-header2"
  >
    header2
  </h2>
</div>
`;

exports[`Two step render result should be same with marksy should produce TOC 1`] = `
"[
  {
    \\"id\\": \\"foo\\",
    \\"title\\": \\"foo\\",
    \\"level\\": 1,
    \\"children\\": [
      {
        \\"id\\": \\"foo-bar\\",
        \\"title\\": \\"bar\\",
        \\"level\\": 2,
        \\"children\\": [
          {
            \\"id\\": \\"foo-bar-baz\\",
            \\"title\\": \\"baz\\",
            \\"level\\": 3,
            \\"children\\": []
          }
        ]
      }
    ]
  }
]"
`;

exports[`Two step render result should be same with marksy should produce TOC complex 1`] = `
"[
  {
    \\"id\\": \\"foo\\",
    \\"title\\": \\"foo\\",
    \\"level\\": 1,
    \\"children\\": [
      {
        \\"id\\": \\"foo-bar\\",
        \\"title\\": \\"bar\\",
        \\"level\\": 2,
        \\"children\\": [
          {
            \\"id\\": \\"f2\\",
            \\"title\\": \\"f2\\",
            \\"level\\": 1,
            \\"children\\": []
          }
        ]
      },
      {
        \\"id\\": \\"f2-f3\\",
        \\"title\\": \\"f3\\",
        \\"level\\": 2,
        \\"children\\": [
          {
            \\"id\\": \\"f2-f3-baz\\",
            \\"title\\": \\"baz\\",
            \\"level\\": 3,
            \\"children\\": []
          }
        ]
      },
      {
        \\"id\\": \\"f2-f4\\",
        \\"title\\": \\"f4\\",
        \\"level\\": 2,
        \\"children\\": []
      }
    ]
  }
]"
`;

exports[`Two step render result should be same with marksy should produce custom tags 1`] = `
<div>
  <div>
    foo
  </div>
</div>
`;

exports[`Two step render result should be same with marksy should work with Inferno 1`] = `"<div><div>foo</div></div>"`;

exports[`Two step render result should be same with marksy should work with Preact 1`] = `"<div><div>foo</div></div>"`;

exports[`Two step render result should be same with marksy strong text 1`] = `
<div>
  <p>
    hello 
    <strong>
      there
    </strong>
  </p>
</div>
`;

exports[`Two step render result should be same with marksy tables 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th>
          Tables
        </th>
        <th
          class="text-center"
        >
          Are
        </th>
        <th
          class="text-right"
        >
          Cool
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          col 3 is
        </td>
        <td
          class="text-center"
        >
          right-aligned
        </td>
        <td
          class="text-right"
        >
          $1600
        </td>
      </tr>
      <tr>
        <td>
          col 2 is
        </td>
        <td
          class="text-center"
        >
          centered
        </td>
        <td
          class="text-right"
        >
          $12
        </td>
      </tr>
      <tr>
        <td>
          zebra stripes
        </td>
        <td
          class="text-center"
        >
          are neat
        </td>
        <td
          class="text-right"
        >
          $1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Two step render result should be same with marksy text 1`] = `
<div>
  <p>
    hello
  </p>
</div>
`;
